更新图片及样式

--- a/src/assets/report-common-style.css
+++ b/src/assets/report-common-style.css
@@ -14,26 +14,24 @@
 
 .text-container {
 	background-color: #102455;
-	height: 388px;
+	height: 194px;
 	text-align: center;
 }
 
 .text-container div {
 	margin: 0 auto;
-  padding-top: 80px;
-  width: 628px;
+  padding: 40px 30px;
 }
 
 .text-container p {
-	width: 572px;
 	text-align: left;
   margin: 0;
-  font-size: 20px;
+  font-size: 10px;
   color: #FFF;
+  font-weight: 200;
 }
 
 .text-container p:first-child {
-	width: 628px;
-  font-size: 44px;
-  margin-bottom: 54px;
+  font-size: 22px;
+  margin-bottom: 27px;
 }
