--- a/src/assets/sprite-saic.css
+++ b/src/assets/sprite-saic.css
@@ -16,87 +16,207 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 // HTML
 <i class="icon icon-home"></i>
 */
+.icon-68 {
+  background-image: url(sprite-saic.png);
+  background-position: 0px -781px;
+  width: 220px;
+  height: 122px;
+}
+.icon-68-pie {
+  background-image: url(sprite-saic.png);
+  background-position: -314px -334px;
+  width: 117px;
+  height: 116px;
+}
 .icon-angel-down-red {
   background-image: url(sprite-saic.png);
-  background-position: -197px -192px;
+  background-position: -808px -633px;
   width: 30px;
   height: 16px;
 }
 .icon-angel-down {
   background-image: url(sprite-saic.png);
-  background-position: -235px -159px;
+  background-position: -905px -456px;
   width: 30px;
   height: 16px;
 }
 .icon-angel-right {
   background-image: url(sprite-saic.png);
-  background-position: -47px -220px;
+  background-position: -937px -218px;
   width: 9px;
   height: 14px;
 }
+.icon-angel-up-1 {
+  background-image: url(sprite-saic.png);
+  background-position: -525px -407px;
+  width: 125px;
+  height: 81px;
+}
+.icon-angel-up-2 {
+  background-image: url(sprite-saic.png);
+  background-position: -220px -781px;
+  width: 112px;
+  height: 112px;
+}
+.icon-angel-up-3 {
+  background-image: url(sprite-saic.png);
+  background-position: 0px -334px;
+  width: 314px;
+  height: 184px;
+}
 .icon-button-action {
   background-image: url(sprite-saic.png);
-  background-position: -227px -192px;
+  background-position: -937px -189px;
   width: 20px;
   height: 15px;
 }
+.icon-calculator {
+  background-image: url(sprite-saic.png);
+  background-position: -859px -474px;
+  width: 68px;
+  height: 83px;
+}
+.icon-card-ok {
+  background-image: url(sprite-saic.png);
+  background-position: -641px -269px;
+  width: 72px;
+  height: 58px;
+}
+.icon-card {
+  background-image: url(sprite-saic.png);
+  background-position: -314px -450px;
+  width: 110px;
+  height: 55px;
+}
 .icon-comment {
   background-image: url(sprite-saic.png);
-  background-position: -265px -159px;
+  background-position: -937px -173px;
   width: 20px;
   height: 16px;
 }
+.icon-dollar-big {
+  background-image: url(sprite-saic.png);
+  background-position: -859px -557px;
+  width: 67px;
+  height: 66px;
+}
+.icon-dollar {
+  background-image: url(sprite-saic.png);
+  background-position: -641px -327px;
+  width: 54px;
+  height: 54px;
+}
+.icon-earth-small {
+  background-image: url(sprite-saic.png);
+  background-position: -525px -269px;
+  width: 116px;
+  height: 138px;
+}
+.icon-earth {
+  background-image: url(sprite-saic.png);
+  background-position: 0px 0px;
+  width: 333px;
+  height: 334px;
+}
 .icon-heart-white {
   background-image: url(sprite-saic.png);
-  background-position: -27px -220px;
+  background-position: -937px -155px;
   width: 20px;
   height: 18px;
 }
 .icon-heart {
   background-image: url(sprite-saic.png);
-  background-position: -247px -192px;
+  background-position: -937px -204px;
   width: 15px;
   height: 14px;
 }
 .icon-label-dollar {
   background-image: url(sprite-saic.png);
-  background-position: -199px -159px;
+  background-position: -772px -633px;
   width: 36px;
   height: 24px;
 }
 .icon-label-law {
   background-image: url(sprite-saic.png);
-  background-position: 0px -220px;
+  background-position: -937px -126px;
   width: 27px;
   height: 29px;
 }
 .icon-label-market {
   background-image: url(sprite-saic.png);
-  background-position: -166px -192px;
+  background-position: -695px -327px;
   width: 31px;
   height: 25px;
 }
 .icon-label-product {
   background-image: url(sprite-saic.png);
-  background-position: -166px -159px;
+  background-position: -739px -633px;
   width: 33px;
   height: 33px;
 }
 .icon-label-selected {
   background-image: url(sprite-saic.png);
-  background-position: -262px -192px;
+  background-position: -952px -204px;
   width: 12px;
   height: 11px;
 }
 .icon-logo-small {
   background-image: url(sprite-saic.png);
-  background-position: -166px 0px;
+  background-position: -739px -474px;
   width: 120px;
   height: 159px;
 }
 .icon-logo {
   background-image: url(sprite-saic.png);
-  background-position: 0px 0px;
+  background-position: -739px -254px;
   width: 166px;
   height: 220px;
+}
+.icon-man-page1 {
+  background-image: url(sprite-saic.png);
+  background-position: -739px 0px;
+  width: 198px;
+  height: 254px;
+}
+.icon-man-page2 {
+  background-image: url(sprite-saic.png);
+  background-position: -333px 0px;
+  width: 192px;
+  height: 331px;
+}
+.icon-man-page4 {
+  background-image: url(sprite-saic.png);
+  background-position: -525px 0px;
+  width: 214px;
+  height: 269px;
+}
+.icon-man-page6 {
+  background-image: url(sprite-saic.png);
+  background-position: -905px -254px;
+  width: 18px;
+  height: 202px;
+}
+.icon-man-page9 {
+  background-image: url(sprite-saic.png);
+  background-position: -937px 0px;
+  width: 27px;
+  height: 126px;
+}
+.icon-people {
+  background-image: url(sprite-saic.png);
+  background-position: 0px -671px;
+  width: 263px;
+  height: 110px;
+}
+.icon-shanghai {
+  background-image: url(sprite-saic.png);
+  background-position: -329px -518px;
+  width: 356px;
+  height: 92px;
+}
+.icon-text-choose {
+  background-image: url(sprite-saic.png);
+  background-position: 0px -518px;
+  width: 329px;
+  height: 153px;
 }
