--- a/src/assets/report-common-style.css
+++ b/src/assets/report-common-style.css
@@ -14,13 +14,13 @@
 
 .text-container {
 	background-color: #102455;
-	height: 160px;
+	height: 180px;
 	text-align: center;
 }
 
 .text-container div {
 	margin: 0 auto;
-  padding: 30px 30px;
+  padding: 40px 33px;
 }
 
 .text-container p {
@@ -28,10 +28,22 @@
   margin: 0;
   font-size: 10px;
   color: #FFF;
-  font-weight: 200;
+  font-weight: normal;
 }
 
 .text-container p:first-child {
   font-size: 22px;
-  margin-bottom: 27px;
+  margin-bottom: 24px;
+}
+
+.text-container p:last-child:before {
+  content: '';
+  display: inline-block;
+  width: 3px;
+  height: 3px;
+  border-radius: 1.5px;
+  background-color: #FFF;
+  vertical-align: middle;
+  position: relative;
+  left: -3px;
 }
