--- a/src/assets/sprite-saic.css
+++ b/src/assets/sprite-saic.css
@@ -16,33 +16,51 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 // HTML
 <i class="icon icon-home"></i>
 */
-.icon-68 {
+.icon-2015 {
   background-image: url(sprite-saic.png);
-  background-position: 0px -781px;
-  width: 220px;
-  height: 122px;
+  background-position: -329px -610px;
+  width: 146px;
+  height: 46px;
 }
-.icon-68-pie {
+.icon-2016 {
   background-image: url(sprite-saic.png);
-  background-position: -314px -334px;
-  width: 117px;
-  height: 116px;
+  background-position: -233px -671px;
+  width: 233px;
+  height: 132px;
+}
+.icon-2017 {
+  background-image: url(sprite-saic.png);
+  background-position: -314px -446px;
+  width: 148px;
+  height: 47px;
+}
+.icon-2018 {
+  background-image: url(sprite-saic.png);
+  background-position: -739px -633px;
+  width: 79px;
+  height: 25px;
+}
+.icon-2022 {
+  background-image: url(sprite-saic.png);
+  background-position: 0px -671px;
+  width: 233px;
+  height: 132px;
 }
 .icon-angel-down-red {
   background-image: url(sprite-saic.png);
-  background-position: -808px -633px;
-  width: 30px;
-  height: 16px;
+  background-position: -650px -407px;
+  width: 59px;
+  height: 32px;
 }
 .icon-angel-down {
   background-image: url(sprite-saic.png);
-  background-position: -905px -456px;
-  width: 30px;
-  height: 16px;
+  background-position: -650px -439px;
+  width: 59px;
+  height: 32px;
 }
 .icon-angel-right {
   background-image: url(sprite-saic.png);
-  background-position: -937px -218px;
+  background-position: -923px -254px;
   width: 9px;
   height: 14px;
 }
@@ -54,7 +72,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-angel-up-2 {
   background-image: url(sprite-saic.png);
-  background-position: -220px -781px;
+  background-position: -314px -334px;
   width: 112px;
   height: 112px;
 }
@@ -66,7 +84,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-button-action {
   background-image: url(sprite-saic.png);
-  background-position: -937px -189px;
+  background-position: -874px -633px;
   width: 20px;
   height: 15px;
 }
@@ -84,13 +102,13 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-card {
   background-image: url(sprite-saic.png);
-  background-position: -314px -450px;
+  background-position: -729px -671px;
   width: 110px;
   height: 55px;
 }
 .icon-comment {
   background-image: url(sprite-saic.png);
-  background-position: -937px -173px;
+  background-position: -854px -633px;
   width: 20px;
   height: 16px;
 }
@@ -120,45 +138,45 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-heart-white {
   background-image: url(sprite-saic.png);
-  background-position: -937px -155px;
+  background-position: -905px -456px;
   width: 20px;
   height: 18px;
 }
 .icon-heart {
   background-image: url(sprite-saic.png);
-  background-position: -937px -204px;
+  background-position: -894px -633px;
   width: 15px;
   height: 14px;
 }
 .icon-label-dollar {
   background-image: url(sprite-saic.png);
-  background-position: -772px -633px;
+  background-position: -818px -633px;
   width: 36px;
   height: 24px;
 }
 .icon-label-law {
   background-image: url(sprite-saic.png);
-  background-position: -937px -126px;
+  background-position: -709px -407px;
   width: 27px;
   height: 29px;
 }
 .icon-label-market {
   background-image: url(sprite-saic.png);
-  background-position: -695px -327px;
+  background-position: -641px -381px;
   width: 31px;
   height: 25px;
 }
 .icon-label-product {
   background-image: url(sprite-saic.png);
-  background-position: -739px -633px;
+  background-position: -695px -327px;
   width: 33px;
   height: 33px;
 }
 .icon-label-selected {
   background-image: url(sprite-saic.png);
-  background-position: -952px -204px;
-  width: 12px;
-  height: 11px;
+  background-position: -713px -269px;
+  width: 18px;
+  height: 17px;
 }
 .icon-logo-small {
   background-image: url(sprite-saic.png);
@@ -198,13 +216,13 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-man-page9 {
   background-image: url(sprite-saic.png);
-  background-position: -937px 0px;
+  background-position: 0px -803px;
   width: 27px;
   height: 126px;
 }
 .icon-people {
   background-image: url(sprite-saic.png);
-  background-position: 0px -671px;
+  background-position: -466px -671px;
   width: 263px;
   height: 110px;
 }
