--- a/src/assets/sprite-saic.css
+++ b/src/assets/sprite-saic.css
@@ -24,7 +24,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-2016 {
   background-image: url(sprite-saic.png);
-  background-position: -233px -671px;
+  background-position: -466px -671px;
   width: 233px;
   height: 132px;
 }
@@ -60,7 +60,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-angel-right {
   background-image: url(sprite-saic.png);
-  background-position: -923px -254px;
+  background-position: -955px -189px;
   width: 9px;
   height: 14px;
 }
@@ -84,7 +84,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-button-action {
   background-image: url(sprite-saic.png);
-  background-position: -874px -633px;
+  background-position: -937px -206px;
   width: 20px;
   height: 15px;
 }
@@ -102,13 +102,19 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-card {
   background-image: url(sprite-saic.png);
-  background-position: -729px -671px;
+  background-position: -699px -671px;
   width: 110px;
   height: 55px;
 }
+.icon-clock {
+  background-image: url(sprite-saic.png);
+  background-position: -233px -671px;
+  width: 233px;
+  height: 132px;
+}
 .icon-comment {
   background-image: url(sprite-saic.png);
-  background-position: -854px -633px;
+  background-position: -937px -173px;
   width: 20px;
   height: 16px;
 }
@@ -138,13 +144,13 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-heart-white {
   background-image: url(sprite-saic.png);
-  background-position: -905px -456px;
+  background-position: -937px -155px;
   width: 20px;
   height: 18px;
 }
 .icon-heart {
   background-image: url(sprite-saic.png);
-  background-position: -894px -633px;
+  background-position: -937px -221px;
   width: 15px;
   height: 14px;
 }
@@ -156,7 +162,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-label-law {
   background-image: url(sprite-saic.png);
-  background-position: -709px -407px;
+  background-position: -937px -126px;
   width: 27px;
   height: 29px;
 }
@@ -174,7 +180,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-label-selected {
   background-image: url(sprite-saic.png);
-  background-position: -713px -269px;
+  background-position: -937px -189px;
   width: 18px;
   height: 17px;
 }
@@ -216,13 +222,13 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-man-page9 {
   background-image: url(sprite-saic.png);
-  background-position: 0px -803px;
+  background-position: -937px 0px;
   width: 27px;
   height: 126px;
 }
 .icon-people {
   background-image: url(sprite-saic.png);
-  background-position: -466px -671px;
+  background-position: 0px -803px;
   width: 263px;
   height: 110px;
 }
