--- a/src/assets/sprite-saic.css
+++ b/src/assets/sprite-saic.css
@@ -18,25 +18,25 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 */
 .icon-2015 {
   background-image: url(sprite-saic.png);
-  background-position: -329px -610px;
+  background-position: -314px -472px;
   width: 146px;
   height: 46px;
 }
 .icon-2016 {
   background-image: url(sprite-saic.png);
-  background-position: -466px -671px;
+  background-position: -233px -671px;
   width: 233px;
   height: 132px;
 }
 .icon-2017 {
   background-image: url(sprite-saic.png);
-  background-position: -314px -446px;
+  background-position: -739px -623px;
   width: 148px;
   height: 47px;
 }
 .icon-2018 {
   background-image: url(sprite-saic.png);
-  background-position: -739px -633px;
+  background-position: -430px -438px;
   width: 79px;
   height: 25px;
 }
@@ -48,31 +48,31 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-angel-down-red {
   background-image: url(sprite-saic.png);
-  background-position: -650px -407px;
+  background-position: -460px -472px;
   width: 59px;
   height: 32px;
 }
 .icon-angel-down {
   background-image: url(sprite-saic.png);
-  background-position: -650px -439px;
+  background-position: -439px -610px;
   width: 59px;
   height: 32px;
 }
 .icon-angel-right {
   background-image: url(sprite-saic.png);
-  background-position: -955px -189px;
+  background-position: -923px -254px;
   width: 9px;
   height: 14px;
 }
 .icon-angel-up-1 {
   background-image: url(sprite-saic.png);
-  background-position: -525px -407px;
+  background-position: -525px -428px;
   width: 125px;
   height: 81px;
 }
 .icon-angel-up-2 {
   background-image: url(sprite-saic.png);
-  background-position: -314px -334px;
+  background-position: -699px -671px;
   width: 112px;
   height: 112px;
 }
@@ -84,55 +84,61 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-button-action {
   background-image: url(sprite-saic.png);
-  background-position: -937px -206px;
+  background-position: -915px -507px;
   width: 20px;
   height: 15px;
 }
 .icon-calculator {
   background-image: url(sprite-saic.png);
-  background-position: -859px -474px;
+  background-position: -645px -269px;
   width: 68px;
   height: 83px;
 }
 .icon-card-ok {
   background-image: url(sprite-saic.png);
-  background-position: -641px -269px;
+  background-position: -650px -428px;
   width: 72px;
   height: 58px;
 }
 .icon-card {
   background-image: url(sprite-saic.png);
-  background-position: -699px -671px;
+  background-position: -329px -610px;
   width: 110px;
   height: 55px;
 }
 .icon-clock {
   background-image: url(sprite-saic.png);
-  background-position: -233px -671px;
+  background-position: -466px -671px;
   width: 233px;
   height: 132px;
 }
+.icon-close-music {
+  background-image: url(sprite-saic.png);
+  background-position: -739px -474px;
+  width: 149px;
+  height: 149px;
+}
 .icon-comment {
   background-image: url(sprite-saic.png);
-  background-position: -937px -173px;
+  background-position: -915px -474px;
   width: 20px;
   height: 16px;
 }
 .icon-dollar-big {
   background-image: url(sprite-saic.png);
-  background-position: -859px -557px;
+  background-position: -645px -352px;
   width: 67px;
   height: 66px;
 }
 .icon-dollar {
   background-image: url(sprite-saic.png);
-  background-position: -641px -327px;
+  background-position: -430px -334px;
   width: 54px;
   height: 54px;
 }
 .icon-earth-small {
   background-image: url(sprite-saic.png);
-  background-position: -525px -269px;
+  background-position: -314px -334px;
   width: 116px;
   height: 138px;
 }
@@ -144,49 +150,49 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-heart-white {
   background-image: url(sprite-saic.png);
-  background-position: -937px -155px;
+  background-position: -905px -456px;
   width: 20px;
   height: 18px;
 }
 .icon-heart {
   background-image: url(sprite-saic.png);
-  background-position: -937px -221px;
+  background-position: -915px -522px;
   width: 15px;
   height: 14px;
 }
 .icon-label-dollar {
   background-image: url(sprite-saic.png);
-  background-position: -818px -633px;
+  background-position: -484px -334px;
   width: 36px;
   height: 24px;
 }
 .icon-label-law {
   background-image: url(sprite-saic.png);
-  background-position: -937px -126px;
+  background-position: -712px -352px;
   width: 27px;
   height: 29px;
 }
 .icon-label-market {
   background-image: url(sprite-saic.png);
-  background-position: -641px -381px;
+  background-position: -484px -358px;
   width: 31px;
   height: 25px;
 }
 .icon-label-product {
   background-image: url(sprite-saic.png);
-  background-position: -695px -327px;
+  background-position: -887px -623px;
   width: 33px;
   height: 33px;
 }
 .icon-label-selected {
   background-image: url(sprite-saic.png);
-  background-position: -937px -189px;
+  background-position: -915px -490px;
   width: 18px;
   height: 17px;
 }
 .icon-logo-small {
   background-image: url(sprite-saic.png);
-  background-position: -739px -474px;
+  background-position: -525px -269px;
   width: 120px;
   height: 159px;
 }
@@ -222,7 +228,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-man-page9 {
   background-image: url(sprite-saic.png);
-  background-position: -937px 0px;
+  background-position: -888px -474px;
   width: 27px;
   height: 126px;
 }
@@ -237,6 +243,18 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   background-position: -329px -518px;
   width: 356px;
   height: 92px;
+}
+.icon-start-music {
+  background-image: url(sprite-saic.png);
+  background-position: -430px -388px;
+  width: 50px;
+  height: 50px;
+}
+.icon-stop-music {
+  background-image: url(sprite-saic.png);
+  background-position: -685px -518px;
+  width: 50px;
+  height: 50px;
 }
 .icon-text-choose {
   background-image: url(sprite-saic.png);
