--- a/src/assets/saic-animate.css
+++ b/src/assets/saic-animate.css
@@ -12,6 +12,24 @@
 		transform: rotate(360deg);
 	}
 }
+@-webkit-keyframes rotate {
+	25% {
+		transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+	}
+	50% {
+		transform: rotate(180deg);
+		-webkit-transform: rotate(180deg);
+	}
+	75% {
+		transform: rotate(270deg);
+		-webkit-transform: rotate(270deg);
+	}
+	100% {
+		transform: rotate(360deg);
+		-webkit-transform: rotate(360deg);
+	}
+}
 
 @keyframes rotate-left {
 	25% {
@@ -28,6 +46,25 @@
 	}
 }
 
+@-webkit-keyframes rotate-left {
+	25% {
+		transform: rotate(-90deg);
+		-webkit-transform: rotate(-90deg);
+	}
+	50% {
+		transform: rotate(-180deg);
+		-webkit-transform: rotate(-180deg);
+	}
+	75% {
+		transform: rotate(-270deg);
+		-webkit-transform: rotate(-270deg);
+	}
+	100% {
+		transform: rotate(-360deg);
+		-webkit-transform: rotate(-360deg);
+	}
+}
+
 @keyframes little-bounce {
 	25% {
 		transform: translateY(-2px);
@@ -38,6 +75,22 @@
 	}
 	75% {
 		transform: translateY(2px);
+	}
+}
+
+@-webkit-keyframes little-bounce {
+	25% {
+		transform: translateY(-2px);
+		-webkit-transform: translateY(-2px);
+	}
+	50%,
+	100% {
+		transform: translateY(0);
+		-webkit-transform: translateY(0);
+	}
+	75% {
+		transform: translateY(2px);
+		-webkit-transform: translateY(2px);
 	}
 }
 
@@ -53,6 +106,21 @@
 		transform: translateY(10px);
 	}
 }
+@-webkit-keyframes bounce-down {
+	25% {
+		transform: translateY(-5px);
+		-webkit-transform: translateY(-5px);
+	}
+	50%,
+	100% {
+		transform: translateY(0);
+		-webkit-transform: translateY(0);
+	}
+	75% {
+		transform: translateY(10px);
+		-webkit-transform: translateY(10px);
+	}
+}
 
 @keyframes bounce-right {
 	25% {
@@ -66,8 +134,49 @@
 		transform: translateX(5px);
 	}
 }
+@-webkit-keyframes bounce-right {
+	25% {
+		transform: translateX(-5px);
+		-webkit-transform: translateX(-5px);
+	}
+	50%,
+	100% {
+		transform: translateX(0);
+		-webkit-transform: translateX(0);
+	}
+	75% {
+		transform: translateX(5px);
+		-webkit-transform: translateX(5px);
+	}
+}
 
 @keyframes spinner-fade {
+	0% {
+    background-color: rgba(255, 255, 255, 0);
+	}
+	13% {
+		background-color: rgba(255, 255, 255, .13);
+	}
+	25% {
+		background-color: rgba(255, 255, 255, .25);
+	}
+	50% {
+		background-color: rgba(255, 255, 255, .5);
+	}
+	63% {
+		background-color: rgba(255, 255, 255, .63);
+	}
+	75% {
+		background-color: rgba(255, 255, 255, .75);
+	}
+	88% {
+		background-color: rgba(255, 255, 255, .88);
+	}
+	100% {
+		background-color: rgba(255, 255, 255, 1);
+	}
+}
+@-webkit-keyframes spinner-fade {
 	0% {
     background-color: rgba(255, 255, 255, 0);
 	}
