--- a/static/sprite-saic.css
+++ b/static/sprite-saic.css
@@ -16,489 +16,231 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 // HTML
 <i class="icon icon-home"></i>
 */
-.icon-car-big {
+.icon-2015 {
   background-image: url(sprite-saic.png);
-  background-position: -1062px -1957px;
-  width: 275px;
-  height: 109px;
+  background-position: -329px -610px;
+  width: 146px;
+  height: 46px;
 }
-.icon-car-small {
+.icon-2016 {
   background-image: url(sprite-saic.png);
-  background-position: -276px -2214px;
-  width: 144px;
-  height: 86px;
+  background-position: -466px -671px;
+  width: 233px;
+  height: 132px;
 }
-.icon-future-car {
+.icon-2017 {
   background-image: url(sprite-saic.png);
-  background-position: -2131px -1119px;
-  width: 141px;
-  height: 261px;
-}
-.icon-future-cartail {
-  background-image: url(sprite-saic.png);
-  background-position: -2283px -654px;
-  width: 55px;
-  height: 69px;
-}
-.icon-future-major {
-  background-image: url(sprite-saic.png);
-  background-position: -1512px -1726px;
-  width: 335px;
-  height: 64px;
-}
-.icon-future-major1 {
-  background-image: url(sprite-saic.png);
-  background-position: -1593px -2001px;
-  width: 262px;
-  height: 57px;
-}
-.icon-future-major2 {
-  background-image: url(sprite-saic.png);
-  background-position: -1855px -2001px;
-  width: 259px;
-  height: 57px;
-}
-.icon-future-major3 {
-  background-image: url(sprite-saic.png);
-  background-position: -316px -2076px;
-  width: 261px;
-  height: 56px;
-}
-.icon-future-major4 {
-  background-image: url(sprite-saic.png);
-  background-position: -1798px -1613px;
-  width: 155px;
-  height: 57px;
-}
-.icon-future-polygan1 {
-  background-image: url(sprite-saic.png);
-  background-position: -1506px -674px;
-  width: 343px;
-  height: 343px;
-}
-.icon-future-polygan2 {
-  background-image: url(sprite-saic.png);
-  background-position: -2108px -1637px;
-  width: 163px;
-  height: 164px;
-}
-.icon-future-polygan3 {
-  background-image: url(sprite-saic.png);
-  background-position: -2283px -113px;
-  width: 118px;
-  height: 118px;
-}
-.icon-future-polygan4 {
-  background-image: url(sprite-saic.png);
-  background-position: -2283px -334px;
-  width: 103px;
-  height: 104px;
-}
-.icon-future-polygan5 {
-  background-image: url(sprite-saic.png);
-  background-position: -2283px -438px;
-  width: 91px;
-  height: 89px;
-}
-.icon-future-polygan6 {
-  background-image: url(sprite-saic.png);
-  background-position: -1987px -902px;
-  width: 218px;
-  height: 217px;
-}
-.icon-future-polygan7 {
-  background-image: url(sprite-saic.png);
-  background-position: -2283px -527px;
-  width: 88px;
-  height: 87px;
-}
-.icon-future-title1 {
-  background-image: url(sprite-saic.png);
-  background-position: -1064px -598px;
-  width: 431px;
-  height: 381px;
-}
-.icon-future-title2 {
-  background-image: url(sprite-saic.png);
-  background-position: 0px -598px;
-  width: 532px;
-  height: 440px;
-}
-.icon-future-title3 {
-  background-image: url(sprite-saic.png);
-  background-position: -508px -1038px;
-  width: 468px;
-  height: 446px;
-}
-.icon-future-title4 {
-  background-image: url(sprite-saic.png);
-  background-position: 0px -1038px;
-  width: 508px;
-  height: 452px;
-}
-.icon-future-title5 {
-  background-image: url(sprite-saic.png);
-  background-position: -976px -1038px;
-  width: 460px;
-  height: 431px;
-}
-.icon-future-title6 {
-  background-image: url(sprite-saic.png);
-  background-position: -532px -598px;
-  width: 532px;
-  height: 433px;
-}
-.icon-home-bike {
-  background-image: url(sprite-saic.png);
-  background-position: -2283px -723px;
-  width: 44px;
-  height: 59px;
-}
-.icon-home-bridge1 {
-  background-image: url(sprite-saic.png);
-  background-position: 0px -1726px;
-  width: 405px;
-  height: 231px;
-}
-.icon-home-bridge2 {
-  background-image: url(sprite-saic.png);
-  background-position: -1096px -1490px;
-  width: 405px;
-  height: 202px;
-}
-.icon-home-build1 {
-  background-image: url(sprite-saic.png);
-  background-position: -1987px -1436px;
-  width: 180px;
-  height: 201px;
-}
-.icon-home-build10 {
-  background-image: url(sprite-saic.png);
-  background-position: -1987px -1637px;
-  width: 121px;
-  height: 297px;
-}
-.icon-home-build11 {
-  background-image: url(sprite-saic.png);
-  background-position: -2283px 0px;
-  width: 125px;
-  height: 113px;
-}
-.icon-home-build12 {
-  background-image: url(sprite-saic.png);
-  background-position: 0px -2076px;
-  width: 153px;
-  height: 138px;
-}
-.icon-home-build2 {
-  background-image: url(sprite-saic.png);
-  background-position: -1842px -1017px;
-  width: 90px;
-  height: 215px;
-}
-.icon-home-build3 {
-  background-image: url(sprite-saic.png);
-  background-position: -1849px -883px;
-  width: 117px;
-  height: 131px;
-}
-.icon-home-build4 {
-  background-image: url(sprite-saic.png);
-  background-position: -2167px -1436px;
-  width: 116px;
-  height: 174px;
-}
-.icon-home-build5 {
-  background-image: url(sprite-saic.png);
-  background-position: -2283px -782px;
-  width: 46px;
+  background-position: -314px -446px;
+  width: 148px;
   height: 47px;
 }
-.icon-home-build6 {
+.icon-2018 {
   background-image: url(sprite-saic.png);
-  background-position: -1847px -320px;
-  width: 90px;
-  height: 337px;
+  background-position: -739px -633px;
+  width: 79px;
+  height: 25px;
 }
-.icon-home-build7 {
+.icon-2022 {
   background-image: url(sprite-saic.png);
-  background-position: -1987px -1119px;
-  width: 144px;
-  height: 317px;
+  background-position: 0px -671px;
+  width: 233px;
+  height: 132px;
 }
-.icon-home-build8 {
+.icon-angel-down-red {
   background-image: url(sprite-saic.png);
-  background-position: -1987px 0px;
-  width: 296px;
-  height: 287px;
+  background-position: -650px -407px;
+  width: 59px;
+  height: 32px;
 }
-.icon-home-build9 {
+.icon-angel-down {
   background-image: url(sprite-saic.png);
-  background-position: -1798px -1490px;
-  width: 189px;
-  height: 123px;
+  background-position: -650px -439px;
+  width: 59px;
+  height: 32px;
 }
-.icon-home-car {
+.icon-angel-right {
   background-image: url(sprite-saic.png);
-  background-position: -2108px -1801px;
-  width: 151px;
-  height: 116px;
+  background-position: -955px -189px;
+  width: 9px;
+  height: 14px;
 }
-.icon-home-cars {
+.icon-angel-up-1 {
   background-image: url(sprite-saic.png);
-  background-position: -153px -2076px;
-  width: 163px;
-  height: 92px;
+  background-position: -525px -407px;
+  width: 125px;
+  height: 81px;
 }
-.icon-home-mans {
+.icon-angel-up-2 {
   background-image: url(sprite-saic.png);
-  background-position: -137px -2214px;
-  width: 139px;
-  height: 92px;
+  background-position: -314px -334px;
+  width: 112px;
+  height: 112px;
 }
-.icon-home-rainbow {
+.icon-angel-up-3 {
   background-image: url(sprite-saic.png);
-  background-position: -2283px -231px;
+  background-position: 0px -334px;
+  width: 314px;
+  height: 184px;
+}
+.icon-button-action {
+  background-image: url(sprite-saic.png);
+  background-position: -937px -206px;
+  width: 20px;
+  height: 15px;
+}
+.icon-calculator {
+  background-image: url(sprite-saic.png);
+  background-position: -859px -474px;
+  width: 68px;
+  height: 83px;
+}
+.icon-card-ok {
+  background-image: url(sprite-saic.png);
+  background-position: -641px -269px;
+  width: 72px;
+  height: 58px;
+}
+.icon-card {
+  background-image: url(sprite-saic.png);
+  background-position: -699px -671px;
   width: 110px;
-  height: 103px;
+  height: 55px;
 }
-.icon-home-title {
+.icon-clock {
   background-image: url(sprite-saic.png);
-  background-position: -1506px 0px;
-  width: 481px;
-  height: 320px;
+  background-position: -233px -671px;
+  width: 233px;
+  height: 132px;
 }
-.icon-home-windmill {
+.icon-comment {
   background-image: url(sprite-saic.png);
-  background-position: -1849px -674px;
-  width: 116px;
-  height: 209px;
+  background-position: -937px -173px;
+  width: 20px;
+  height: 16px;
 }
-.icon-homg-slogan {
+.icon-dollar-big {
   background-image: url(sprite-saic.png);
-  background-position: -1501px -1490px;
-  width: 297px;
-  height: 185px;
+  background-position: -859px -557px;
+  width: 67px;
+  height: 66px;
 }
-.icon-logo {
+.icon-dollar {
   background-image: url(sprite-saic.png);
-  background-position: -1086px 0px;
-  width: 420px;
-  height: 583px;
-}
-.icon-major-icon1 {
-  background-image: url(sprite-saic.png);
-  background-position: -2329px -782px;
-  width: 51px;
-  height: 41px;
-}
-.icon-major-icon2 {
-  background-image: url(sprite-saic.png);
-  background-position: -2338px -654px;
+  background-position: -641px -327px;
   width: 54px;
   height: 54px;
 }
-.icon-major-icon3 {
+.icon-earth-small {
   background-image: url(sprite-saic.png);
-  background-position: -2327px -723px;
-  width: 58px;
-  height: 38px;
+  background-position: -525px -269px;
+  width: 116px;
+  height: 138px;
 }
-.icon-major-icon4 {
-  background-image: url(sprite-saic.png);
-  background-position: -2283px -829px;
-  width: 44px;
-  height: 47px;
-}
-.icon-name {
-  background-image: url(sprite-saic.png);
-  background-position: -1506px -1316px;
-  width: 451px;
-  height: 146px;
-}
-.icon-report-cloud {
-  background-image: url(sprite-saic.png);
-  background-position: 0px -1490px;
-  width: 605px;
-  height: 236px;
-}
-.icon-report-mobile {
-  background-image: url(sprite-saic.png);
-  background-position: 0px -2214px;
-  width: 137px;
-  height: 95px;
-}
-.icon-report-polygon {
-  background-image: url(sprite-saic.png);
-  background-position: -1337px -1957px;
-  width: 256px;
-  height: 103px;
-}
-.icon-report-title {
-  background-image: url(sprite-saic.png);
-  background-position: -1987px -509px;
-  width: 285px;
-  height: 197px;
-}
-.icon-report-year {
-  background-image: url(sprite-saic.png);
-  background-position: -1661px -1812px;
-  width: 193px;
-  height: 97px;
-}
-.icon-report1-content {
-  background-image: url(sprite-saic.png);
-  background-position: -1987px -706px;
-  width: 272px;
-  height: 196px;
-}
-.icon-report1-title {
-  background-image: url(sprite-saic.png);
-  background-position: -536px -1957px;
-  width: 263px;
-  height: 119px;
-}
-.icon-report2-content {
-  background-image: url(sprite-saic.png);
-  background-position: -405px -1726px;
-  width: 307px;
-  height: 204px;
-}
-.icon-report2-title {
-  background-image: url(sprite-saic.png);
-  background-position: -799px -1957px;
-  width: 263px;
-  height: 119px;
-}
-.icon-report3-content {
-  background-image: url(sprite-saic.png);
-  background-position: -1987px -287px;
-  width: 292px;
-  height: 222px;
-}
-.icon-report3-title {
-  background-image: url(sprite-saic.png);
-  background-position: 0px -1957px;
-  width: 268px;
-  height: 119px;
-}
-.icon-report4-content {
-  background-image: url(sprite-saic.png);
-  background-position: -712px -1726px;
-  width: 303px;
-  height: 204px;
-}
-.icon-report4-title {
-  background-image: url(sprite-saic.png);
-  background-position: -268px -1957px;
-  width: 268px;
-  height: 119px;
-}
-.icon-slogan-tip {
-  background-image: url(sprite-saic.png);
-  background-position: -1376px -1812px;
-  width: 285px;
-  height: 98px;
-}
-.icon-slogan-title {
-  background-image: url(sprite-saic.png);
-  background-position: -605px -1490px;
-  width: 491px;
-  height: 230px;
-}
-.icon-wechat-bgboard {
-  background-image: url(sprite-saic.png);
-  background-position: -558px 0px;
-  width: 528px;
-  height: 587px;
-}
-.icon-wechat-bgpolygan {
+.icon-earth {
   background-image: url(sprite-saic.png);
   background-position: 0px 0px;
-  width: 558px;
-  height: 598px;
+  width: 333px;
+  height: 334px;
 }
-.icon-wechat-major1 {
+.icon-heart-white {
   background-image: url(sprite-saic.png);
-  background-position: -1303px -979px;
-  width: 199px;
-  height: 41px;
+  background-position: -937px -155px;
+  width: 20px;
+  height: 18px;
 }
-.icon-wechat-major2 {
+.icon-heart {
   background-image: url(sprite-saic.png);
-  background-position: -153px -2168px;
-  width: 197px;
-  height: 42px;
+  background-position: -937px -221px;
+  width: 15px;
+  height: 14px;
 }
-.icon-wechat-major3 {
+.icon-label-dollar {
   background-image: url(sprite-saic.png);
-  background-position: -815px -2076px;
-  width: 199px;
-  height: 41px;
+  background-position: -818px -633px;
+  width: 36px;
+  height: 24px;
 }
-.icon-wechat-major4 {
+.icon-label-law {
   background-image: url(sprite-saic.png);
-  background-position: -2283px -614px;
-  width: 118px;
-  height: 40px;
-}
-.icon-wechat-man1 {
-  background-image: url(sprite-saic.png);
-  background-position: -1506px -320px;
-  width: 341px;
-  height: 354px;
-}
-.icon-wechat-man2 {
-  background-image: url(sprite-saic.png);
-  background-position: -1506px -1017px;
-  width: 336px;
-  height: 299px;
-}
-.icon-wechat-provide1 {
-  background-image: url(sprite-saic.png);
-  background-position: -577px -2076px;
-  width: 238px;
-  height: 41px;
-}
-.icon-wechat-provide2 {
-  background-image: url(sprite-saic.png);
-  background-position: -1064px -979px;
-  width: 239px;
-  height: 41px;
-}
-.icon-wechat-require {
-  background-image: url(sprite-saic.png);
-  background-position: -1015px -1812px;
-  width: 361px;
-  height: 108px;
-}
-.icon-wechat-right {
-  background-image: url(sprite-saic.png);
-  background-position: -2374px -438px;
-  width: 31px;
+  background-position: -937px -126px;
+  width: 27px;
   height: 29px;
 }
-.icon-wechat-title1 {
+.icon-label-market {
   background-image: url(sprite-saic.png);
-  background-position: -1015px -1726px;
-  width: 497px;
-  height: 86px;
+  background-position: -641px -381px;
+  width: 31px;
+  height: 25px;
 }
-.icon-wechat-title2 {
+.icon-label-product {
   background-image: url(sprite-saic.png);
-  background-position: -1593px -1957px;
-  width: 501px;
-  height: 44px;
+  background-position: -695px -327px;
+  width: 33px;
+  height: 33px;
 }
-.icon-wheel-big {
+.icon-label-selected {
   background-image: url(sprite-saic.png);
-  background-position: -2327px -829px;
-  width: 45px;
-  height: 45px;
+  background-position: -937px -189px;
+  width: 18px;
+  height: 17px;
 }
-.icon-wheel.small {
+.icon-logo-small {
   background-image: url(sprite-saic.png);
-  background-position: -2386px -334px;
-  width: 21px;
-  height: 22px;
+  background-position: -739px -474px;
+  width: 120px;
+  height: 159px;
+}
+.icon-logo {
+  background-image: url(sprite-saic.png);
+  background-position: -739px -254px;
+  width: 166px;
+  height: 220px;
+}
+.icon-man-page1 {
+  background-image: url(sprite-saic.png);
+  background-position: -739px 0px;
+  width: 198px;
+  height: 254px;
+}
+.icon-man-page2 {
+  background-image: url(sprite-saic.png);
+  background-position: -333px 0px;
+  width: 192px;
+  height: 331px;
+}
+.icon-man-page4 {
+  background-image: url(sprite-saic.png);
+  background-position: -525px 0px;
+  width: 214px;
+  height: 269px;
+}
+.icon-man-page6 {
+  background-image: url(sprite-saic.png);
+  background-position: -905px -254px;
+  width: 18px;
+  height: 202px;
+}
+.icon-man-page9 {
+  background-image: url(sprite-saic.png);
+  background-position: -937px 0px;
+  width: 27px;
+  height: 126px;
+}
+.icon-people {
+  background-image: url(sprite-saic.png);
+  background-position: 0px -803px;
+  width: 263px;
+  height: 110px;
+}
+.icon-shanghai {
+  background-image: url(sprite-saic.png);
+  background-position: -329px -518px;
+  width: 356px;
+  height: 92px;
+}
+.icon-text-choose {
+  background-image: url(sprite-saic.png);
+  background-position: 0px -518px;
+  width: 329px;
+  height: 153px;
 }
