--- a/src/assets/saic-animate.css
+++ b/src/assets/saic-animate.css
@@ -202,3 +202,12 @@
 		background-color: rgba(255, 255, 255, 1);
 	}
 }
+
+@keyframes opacity-fade {
+  0% { opacity: 0 }
+  100% { opacity: 1 }
+}
+@-webkit-keyframes opacity-fade {
+  0% { opacity: 0 }
+  100% { opacity: 1 }
+}
