--- a/src/assets/saic-animate.css
+++ b/src/assets/saic-animate.css
@@ -211,3 +211,15 @@
   0% { opacity: 0 }
   100% { opacity: 1 }
 }
+
+@keyframes infinite-fade {
+  0% { opacity: 0 }
+  50% { opacity: 1 }
+  100% { opacity: 0 }
+}
+@-webkit-keyframes infinite-fade {
+  0% { opacity: 0 }
+  50% { opacity: 1 }
+  100% { opacity: 0 }
+}
+
