add animation, fix logic

--- a/src/assets/saic-animate.css
+++ b/src/assets/saic-animate.css
@@ -80,17 +80,40 @@
 
 @-webkit-keyframes little-bounce {
 	25% {
-		transform: translateY(-2px);
 		-webkit-transform: translateY(-2px);
 	}
 	50%,
 	100% {
-		transform: translateY(0);
 		-webkit-transform: translateY(0);
 	}
 	75% {
-		transform: translateY(2px);
 		-webkit-transform: translateY(2px);
+	}
+}
+
+@keyframes little-bounce2 {
+	25% {
+		transform: translateY(-1px);
+	}
+	50%,
+	100% {
+		transform: translateY(0);
+	}
+	75% {
+		transform: translateY(1px);
+	}
+}
+
+@-webkit-keyframes little-bounce {
+	25% {
+		-webkit-transform: translateY(-1px);
+	}
+	50%,
+	100% {
+		-webkit-transform: translateY(0);
+	}
+	75% {
+		-webkit-transform: translateY(-1px);
 	}
 }
 
