--- a/src/assets/saic-animate.css
+++ b/src/assets/saic-animate.css
@@ -246,3 +246,27 @@
   100% { opacity: 0 }
 }
 
+@keyframes cloud-float {
+  0% { opacity: 0; transform: translate(0, 0); }
+  50% { opacity: 0.5; transform: translate(-150px, 50px); }
+  100% { opacity: 0; transform: translate(-300px, 100px); }
+}
+@-webkit-keyframes cloud-float {
+  0% { opacity: 0; -webkit-transform: translate(0, 0); }
+  50% { opacity: 0.5; -webkit-transform: translate(-150px, 50px); }
+  100% { opacity: 0; -webkit-transform: translate(-300px, 100px); }
+}
+
+@keyframes cloud-float-horizen {
+  0% { opacity: 0; transform: translateX(100px); }
+  50% { opacity: 1; transform: translateX(0); }
+  100% { opacity: 0; transform: translateX(-100px); }
+}
+@-webkit-keyframes cloud-float-horizen {
+  0% { opacity: 0; -webkit-transform: translate(100px); }
+  50% { opacity: 1; -webkit-transform: translate(0); }
+  100% { opacity: 0; -webkit-transform: translate(100px); }
+}
+
+
+
