--- a/src/assets/saic-animate.css
+++ b/src/assets/saic-animate.css
@@ -268,5 +268,11 @@
   100% { opacity: 0; -webkit-transform: translate(100px); }
 }
 
-
-
+@keyframes increase-height {
+  0% { height: 0 }
+  100% { height: 68px }
+}
+@-webkit-keyframes increase-height {
+  0% { height: 0 }
+  100% { height: 68px }
+}
