--- a/src/components/report/common.css
+++ b/src/components/report/common.css
@@ -49,8 +49,17 @@
     bottom: 0;
     width: 100%;
     padding: 10px 0;
-    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.6));
+    /*background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.6));*/
     z-index: 4;
+  }
+  .gradientMask {
+    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.6));
+    background: -webkit-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.6));
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
   .hand-right {
     margin: 0 auto;
